--- a/prediction_model/model.ipynb
+++ b/prediction_model/model.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -489,13 +489,12 @@
     "print(\"X_test:\", X_test.shape)\n",
     "print(\"y_train:\", y_train.shape)\n",
     "print(\"y_test:\", y_test.shape)\n",
-    "model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
-    "model.fit(X_train, y_train)\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -515,6 +514,26 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "import joblib\n",
+    "\n",
+    "model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "import joblib\n",
+    "import os\n",
+    "\n",
+    "# Tạo thư mục 'pkl' nếu chưa tồn tại\n",
+    "if not os.path.exists('pkl'):\n",
+    "    os.makedirs('pkl')\n",
+    "\n",
+    "# # Lưu các đối tượng vào thư mục 'pkl'\n",
+    "# joblib.dump(model, 'pkl/model.pkl')\n",
+    "# joblib.dump(scaler, 'pkl/scaler.pkl')\n",
+    "# joblib.dump(label_encoders, 'pkl/label_encoders.pkl')\n",
+    "# joblib.dump(categorical_columns, 'pkl/categorical_columns.pkl')\n",
+    "# joblib.dump(numerical_columns, 'pkl/numerical_columns.pkl')\n",
+    "# joblib.dump(features, 'pkl/features.pkl')\n",
+    "\n",
     "\n",
     "# Dự đoán trên tập kiểm tra\n",
     "y_pred = model.predict(X_test)\n",
@@ -531,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +583,7 @@
        " 'MostTime']"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +693,7 @@
        "[1 rows x 25 columns]"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +833,7 @@
        "[1 rows x 25 columns]"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -867,14 +886,14 @@
      "output_type": "stream",
      "text": [
       "Dữ liệu thực tế ban đầu:\n",
-      "   Age  Grade  StudyTime OnlineCourse   SchoolType ClassType  SelfStudy  \\\n",
-      "0   17     11          8          yes  specialized    gifted          5   \n",
+      "   Age  Grade  StudyTime OnlineCourse SchoolType ClassType  SelfStudy  \\\n",
+      "0   17     11          4          yes    private    normal          5   \n",
       "\n",
       "   GoingOut  Health  LatestScore  ...  ExercisesCompleted  \\\n",
-      "0         1       5           10  ...                  27   \n",
+      "0         1       5            5  ...                  27   \n",
       "\n",
       "   AverageExerciseScore  TestsCompleted  AverageTestScore  \\\n",
-      "0                    10              34                10   \n",
+      "0                     6              34                 6   \n",
       "\n",
       "   AverageTestCompletionTime  ArenaParticipation  \\\n",
       "0                       76.2                  50   \n",
@@ -889,13 +908,13 @@
       "\n",
       "Dữ liệu sau khi mã hóa các biến phân loại:\n",
       "   Age  Grade  StudyTime  OnlineCourse  SchoolType  ClassType  SelfStudy  \\\n",
-      "0   17     11          8             1           2          0          5   \n",
+      "0   17     11          4             1           0          1          5   \n",
       "\n",
       "   GoingOut  Health  LatestScore  ...  ExercisesCompleted  \\\n",
-      "0         1       5           10  ...                  27   \n",
+      "0         1       5            5  ...                  27   \n",
       "\n",
       "   AverageExerciseScore  TestsCompleted  AverageTestScore  \\\n",
-      "0                    10              34                10   \n",
+      "0                     6              34                 6   \n",
       "\n",
       "   AverageTestCompletionTime  ArenaParticipation  \\\n",
       "0                       76.2                  50   \n",
@@ -910,13 +929,13 @@
       "\n",
       "Dữ liệu sau khi chuẩn hóa các đặc trưng số học:\n",
       "        Age     Grade  StudyTime  OnlineCourse  SchoolType  ClassType  \\\n",
-      "0 -0.913001 -0.449545   3.581078             1           2          0   \n",
+      "0 -0.913001 -0.449545   0.742348             1           0          1   \n",
       "\n",
       "   SelfStudy  GoingOut    Health  LatestScore  ...  ExercisesCompleted  \\\n",
-      "0   1.406266  -1.40017  1.429955     1.571463  ...                  27   \n",
+      "0   1.406266  -1.40017  1.429955    -0.008759  ...                  27   \n",
       "\n",
       "   AverageExerciseScore  TestsCompleted  AverageTestScore  \\\n",
-      "0              1.725996        0.661632          1.745918   \n",
+      "0              0.336819        0.661632          0.348722   \n",
       "\n",
       "   AverageTestCompletionTime  ArenaParticipation  \\\n",
       "0                       76.2                  50   \n",
@@ -930,7 +949,7 @@
       "[1 rows x 25 columns]\n",
       "\n",
       "Dự đoán điểm thi cho dữ liệu thực tế mới:\n",
-      "[8.7788]\n"
+      "[7.1479]\n"
      ]
     }
    ],
@@ -946,23 +965,23 @@
     "    {\n",
     "        'Age': 17,\n",
     "        'Grade': 11,\n",
-    "        'StudyTime': 8,\n",
+    "        'StudyTime': 4,\n",
     "        'OnlineCourse': 'yes',\n",
-    "        'SchoolType': 'specialized',\n",
-    "        'ClassType': 'gifted',\n",
+    "        'SchoolType': 'private',\n",
+    "        'ClassType': 'normal',\n",
     "        'SelfStudy': 5,\n",
     "        'GoingOut': 1,\n",
     "        'Health': 5,\n",
-    "        'LatestScore': 10,\n",
+    "        'LatestScore': 5,\n",
     "        'DailyTimeSpent': 4.1,\n",
     "        'DayActive': 11,\n",
     "        'ResourceAccessed': 50,\n",
     "        'ForumParticipationFrequency': 5,\n",
     "        'HelpfulAnswers': 12,\n",
     "        'ExercisesCompleted': 27,\n",
-    "        'AverageExerciseScore': 10,\n",
+    "        'AverageExerciseScore': 6,\n",
     "        'TestsCompleted': 34,\n",
-    "        'AverageTestScore': 10,\n",
+    "        'AverageTestScore': 6,\n",
     "        'AverageTestCompletionTime': 76.2,\n",
     "        'ArenaParticipation': 50,\n",
     "        'ArenaQuestionsAnsweredPercentage': 55.56,\n",
